--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,8 @@
 </style>
 
 <div id="alerts">
-  <div ng-repeat="alert in alerts | orderBy:'-number' | limitTo:5"
-        class="alert alert-{{alert.type}} alert-dismissible" role="alert">
-    <button ng-click="clearAlert(alert.number)" type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    <strong>{{alert.title}}</strong> {{alert.message}}
-  </div>
+  <alert ng-repeat="alert in alerts | orderBy:'-number' | limitTo:5"
+          type="alert.type" close="closeAlert($index)" ng-bind-html="alert.msg"></alert>
 </div>
 
 <%= yield %>
