--- a/public/templates/game_new.html
+++ b/public/templates/game_new.html
@@ -31,7 +31,7 @@
         <h4>Players</h4>
         <table class="table">
           <tr><th>Name</th><th>Experience</th><th>Colour</th></tr>
-          <tr ng-repeat="game_user in game.game_users" class="clickable">
+          <tr ng-repeat="game_user in game_users" class="clickable">
             <td>{{game_user.user.name}}</td>
             <td>{{game_user.user.experience}}</td>
             <td><span class="label label-default" style="background-color: #{{game_user.colour}};">sample</span></td>
@@ -77,7 +77,9 @@
     <div class="row bar">
       <div class="btn-group pull-right">
         <button ng-click="abandon()" class="btn btn-warning">Abandon</button>
-        <button ng-click="create()" class="btn btn-success">Create</button>
+        <button ng-click="create()" class="btn btn-success" {{created ? 'disabled' : ''}}>
+          {{created ? 'Creating Game...' : 'Create'}}
+        </button>
       </div>
     </div>
   </div>
