--- a/public/templates/game_play.html
+++ b/public/templates/game_play.html
@@ -111,7 +111,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr style="{{game.cow.pregnancy_id > 0 ? 'text-decoration: line-through;': ''}}">
         <td>Milk</td>
         <td ng-repeat="ing_cat in game.ingredient_cats" class="{{ing_cat.name}}">{{ing_cat.milk_score}} pts</td>
       </td>
