--- a/public/templates/games.html
+++ b/public/templates/games.html
@@ -66,7 +66,9 @@
                 <h4>Players</h4>
                 <ul class="dl-horizontal">
                   <li ng-repeat="game_user in game.game_users">
-                    <span class="label label-default player-{{game_user.id}}">{{game_user.user.name}}</span>
+                    <span class="label label-default " style="background-color:#{{game_user.colour}};">
+                      {{game_user.user.name}}
+                    </span>
                      - Score <span class="badge">{{game_user.score}}</span>
                   </li>
                 </ul>
